added export to csv file in admin pannel for order

--- a/templates/shop/home.html
+++ b/templates/shop/home.html
@@ -89,7 +89,10 @@
           </a>
 
           <h6 class="card-title text-center">${{product.price}}</h6>
-          <a href="{{product.get_absolute_url}}" class="btn btn-dark">View</a>
+          <div class="text-center">
+
+            <a href="{{product.get_absolute_url}}" class="btn btn-dark">View</a>
+          </div>
         </div>
       </div>
 
