added coupon functionality in the store

--- a/static/css/cart.css
+++ b/static/css/cart.css
@@ -146,7 +146,7 @@ ul {
     display: inline-block;
     font-size: 18px;
     font-weight: 500;
-    margin-left: 26px;
+    margin-left: 40vw;
     line-height: 60px
 }
 
