--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -81,12 +81,48 @@
                         {% endwith %}
                         {% endfor %}
 
+                        
+                        {% if cart.coupon %}
+    
+                        <div class="order_total">
+                            <div class="order_total_content text-md-right">
+                                <div class="order_total_title">Subtotal:</div>
+                                <div class="order_total_amount">${{cart.get_total_price|floatformat:2}}</div>
+
+
+                            </div>
+                        </div>
+
+                        <div class="order_total">
+                            <div class="order_total_content text-md-right">
+                                <div class="order_total_title">{{ cart.coupon.discount }}% off</div>
+                                <div class="order_total_amount text-danger"> - ${{cart.get_discount|floatformat:2}}</div>
+
+
+                            </div>
+                        </div>
+
+                        {% endif %}
+
+
                         <div class="order_total">
                             <div class="order_total_content text-md-right">
                                 <div class="order_total_title">Order Total:</div>
-                                <div class="order_total_amount">${{cart.get_total_price}}</div>
+                                <div class="order_total_amount text-success">${{cart.get_total_price_after_discount|floatformat:2}}</div>
+
+
                             </div>
                         </div>
+
+                        <div class="mt-5">
+                            <h5>Apply coupon</h5>
+                            <form action="{% url 'apply' %}" method="post" class="form-control"> 
+                                {{ coupon_apply_form }}
+                            <input type="submit"  value="Apply" class="btn btn-primary p-1"> 
+                            {% csrf_token %} 
+                            </form>
+                        </div>
+                        
                         <div class="cart_buttons"> 
                             <!-- <button type="button" class="button cart_button_clear"> Continue Shopping </button> -->
                             <a href="{% url 'product_list' %}" class="btn btn-light p-3">Continue Shoping</a>
