makemessages and compiled all the messages for the translation of templates and models

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,7 @@
     {% endblock head %}
       
     <title>
-    {% block title %} {% endblock title %}| Xahan shop
+    {% block title %} {% endblock title %}| {% trans 'Xahan shop' %}
     </title>
     
 
