--- a/templates/shop/home.html
+++ b/templates/shop/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block title %}
@@ -6,7 +7,7 @@
   {% if category %}
     {{category.name}}
   {% else %}
-    Products
+   {% trans 'Products' %} 
   {% endif %}
     
 {% endblock title %}
@@ -25,7 +26,7 @@
         
           <li class="nav-item">
             <a href=" {% url 'product_list' %} " class="nav-link  {% if not category %} active {% endif %} py-2 border-bottom" aria-current="page" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
-              All Products
+             {% trans 'All Products' %} 
             </a>
           </li>
           
@@ -64,7 +65,7 @@
       {% if category %}
         {{category.name}}
       {% else %}
-        Products
+       {% trans 'Products' %} 
       {% endif %}
     </h1>
      <hr>
@@ -91,7 +92,7 @@
           <h6 class="card-title text-center">${{product.price}}</h6>
           <div class="text-center">
 
-            <a href="{{product.get_absolute_url}}" class="btn btn-dark">View</a>
+            <a href="{{product.get_absolute_url}}" class="btn btn-dark"> {% trans 'View' %} </a>
           </div>
         </div>
       </div>
