--- a/templates/shop/product_detail.html
+++ b/templates/shop/product_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block title %}
@@ -33,7 +34,7 @@
         <form action="{% url 'cart_add' product.id %}" method="post">
             {{cart_product_form}}
             {% csrf_token %}
-            <input type="submit" value="Add to cart" class="btn btn-dark">
+            <input type="submit" value="{% trans 'Add to cart' %}" class="btn btn-dark">
         </form>
         <hr>
         <p>{{product.description|linebreaks}}</p>
