--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Xahan</a>
+          <a class="navbar-brand" href="/">{% trans 'Xahan' %}</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
              
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">{% trans 'Home' %}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'cart_detail' %}"><i class="bi bi-cart"></i>
@@ -48,6 +48,16 @@
 
 
             </ul>
+            {% get_current_language as LANGUAGE_CODE %}
+            {% get_available_languages as LANGUAGES %}
+            {% get_language_info_list for LANGUAGES as languages %}
+
+            {% for language in languages %}
+            <a href="/{{ language.code }}/" class="btn btn-outline-light mx-2 py-0
+            {% if language.code == LANGUAGE_CODE %} active {% endif %}">
+            {{ language.name_local }}</a>
+            {% endfor %}
+
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
