installed parler and integrated into admin and models

--- a/templates/orders/order/create.html
+++ b/templates/orders/order/create.html
@@ -34,7 +34,7 @@
                   </td>
                   <td>
                     <br> <span class='thin'>{{item.product.name}}</span>
-                    <br> Quantity : {{item.quantity}}<br> <span class='thin small'> Price: ${{item.price}} </span>
+                    <br> {% trans 'Quantity' %} : {{item.quantity}}<br> <span class='thin small'> {% trans 'Price' %} : ${{item.price}} </span>
                   </td>
     
                 </tr>
