--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">{% trans 'Xahan' %}</a>
+          <a class="navbar-brand" href="{% url 'product_list' %}">{% trans 'Xahan' %}</a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
              
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">{% trans 'Home' %}</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'product_list' %}">{% trans 'Home' %}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'cart_detail' %}"><i class="bi bi-cart"></i>
