--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -49,7 +49,7 @@
                                         <div class="cart_item_color cart_info_col">
                                             <div class="cart_item_title">{% trans 'Remove' %}</div>
                                             <div class="cart_item_text"><form action="{% url 'cart_remove' product.id %}" method="post">
-                                                <input type="submit" value="remove" class="btn btn-danger">
+                                                <input type="submit" value="{% trans 'remove' %}" class="btn btn-danger">
                                             {% csrf_token %}
                         
                                             </form></div>
@@ -62,7 +62,7 @@
                                                     {{item.update_quantity_form.quantity}}
                                                     {{item.update_quantity_form.override}}
                                                     {% csrf_token %}
-                                                    <input type="submit" value="update" class="btn btn-dark">
+                                                    <input type="submit" value="{% trans 'update' %}" class="btn btn-dark">
                                                 </form>
                                             </div>
                                         </div>
